Add amended loop detection pass and main

--- a/mlir-optimization-pass-example/BUILD
+++ b/mlir-optimization-pass-example/BUILD
@@ -18,11 +18,27 @@ cc_library(
     alwayslink = 1,
 )
 
+cc_library(
+    name = "example_loop_optimize_pass",
+    srcs = ["example_loop_optimize_pass.cpp"],
+    hdrs = ["example_loop_optimize_pass.h"],
+    deps = [
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:SCFDialect",
+        "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:FuncDialect",
+        "@llvm-project//mlir:TransformUtils",
+    ],
+    alwayslink = 1,
+)
+
 cc_binary(
     name = "optimizer",
     srcs = ["main.cpp"],
     deps = [
         ":detect_loop_pass",
+        ":example_loop_optimize_pass",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:Support",
