Working loop unroll example pass

--- a/mlir-optimization-pass-example/BUILD
+++ b/mlir-optimization-pass-example/BUILD
@@ -33,18 +33,35 @@ cc_library(
     alwayslink = 1,
 )
 
+cc_library(
+    name = "loop_unroll_pass",
+    srcs = ["loop_unroll_pass.cpp"],
+    hdrs = ["loop_unroll_pass.h"],
+    deps = [
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:SCFDialect",
+        "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:FuncDialect",
+        "@llvm-project//mlir:TransformUtils",
+    ],
+    alwayslink = 1,
+)
+
 cc_binary(
     name = "optimizer",
     srcs = ["main.cpp"],
     deps = [
         ":detect_loop_pass",
         ":example_loop_optimize_pass",
+        ":loop_unroll_pass",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:Parser",
         "@llvm-project//mlir:AllPassesAndDialects",
         "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:MlirOptLib",
     ],
     data = [":test_mlir"],
 )
