--- a/mlir-optimization-pass-example/WORKSPACE
+++ b/mlir-optimization-pass-example/WORKSPACE
@@ -56,3 +56,11 @@ maybe(
         "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
     ],
 )
+
+
+# Download and extract ISL
+new_local_repository(
+    name = "isl",
+    build_file = "@//:third_party/isl.BUILD",
+    path = "/usr/local/Cellar/llvm/16.0.6",
+)
